--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   },
   "dependencies": {
     "react": "^16.9.0",
-    "react-dom": "^16.9.0"
+    "react-dom": "^16.9.0",
+    "@material-ui/core": "^4.4.3",
+    "@material-ui/icons": "^4.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
