--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "react-scripts": "3.1.2"
   },
   "dependencies": {
+    "@material-ui/core": "^4.4.3",
+    "@material-ui/icons": "^4.4.3",
+    "axios": "^0.19.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "@material-ui/core": "^4.4.3",
-    "@material-ui/icons": "^4.4.3"
+    "react-router-dom": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
