--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "material-app",
+  "proxy": "http://localhost:8088/",
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
     "react-scripts": "3.1.2"
   },
   "dependencies": {
+    "@date-io/moment": "^1.3.11",
     "@material-ui/core": "^4.4.3",
     "@material-ui/icons": "^4.4.3",
+    "@material-ui/pickers": "^3.2.6",
     "axios": "^0.19.0",
+    "moment": "^2.24.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.1.0"
